<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/mar2"
    tools:context=".Main2Activity"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="62dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/papagaio" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="297dp"
        android:layout_height="126dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:background="#fbe0aa"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/editor_de_arquivo_csv"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:saveEnabled="true"
        android:scrollbarFadeDuration="0"
        android:scrollbars="horizontal|vertical"
        android:shadowColor="@color/bootstrap_brand_primary"
        android:textSize="24sp"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="74dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@mipmap/conjbotaoquadred"
        android:onClick="onClickSave"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@mipmap/botaoquadvoltar"
        android:onClick="onClickVoltar"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@mipmap/botaoquadapaga"
        android:onClick="onClickDelete"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="74dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:background="@mipmap/botaoquadpinta"
        android:onClick="onClickArquivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="73dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/escudomb"
        android:onClick="onClickMB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:srcCompat="@mipmap/botaoquadmb" />

    <Button
        android:id="@+id/button9"
        android:layout_width="74dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:background="@mipmap/botaoquadbigram"
        android:onClick="onClickBigramas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="16dp"
        android:background="#6ac9d7"
        android:digits="1234567890WXYZT"
        android:ems="10"
        android:hint="@string/ind_mark"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/editText5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="16dp"
        android:background="#6ac9d7"
        android:digits="1234567890WXYZT"
        android:ems="10"
        android:hint="Codigo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="62dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:srcCompat="@mipmap/papagaio" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="384dp"
        android:layout_height="154dp"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/redframeuch" />


</android.support.constraint.ConstraintLayout>

